[package]
name = "credence"
version = "0.1.0"
authors = ["Johan Thomsen <write@ownrisk.dk>"]
edition = "2021"

[dependencies]
clap = "3"
chrono = "0"
env_logger = "0"
log = "0"
openssl = "0"
reqwest = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
url = "2"
